<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:background="@drawable/roundedtextview"
    android:padding="10dp"
    android:backgroundTint="#ECEAEA">

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/first_address"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txt_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/first_number"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/txt_address"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/first_internet"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/txt_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>